[package]
name = "limitador-server"
version = "0.4.0"
authors = ["David Ortiz <z.david.ortiz@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limitador = { path = "../limitador", features = ['infinispan_storage'] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tonic = "0.6"
prost = "0.9"
prost-types = "0.9"
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.9"
url = "2.2"
actix-web = "= 4.0.0-beta.14"
actix-rt = { version = "2", features = ["io-uring"] }
paperclip = { git = "https://github.com/sfisol/paperclip", branch = "actix4", features = ["actix"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tonic-build = "0.6"
